--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,15 @@
       </a>
     </div>
     <div class="header-nav">
-
+      <a routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" class="nav-link">
+        <span class="nav-text">Home</span>
+      </a>
+      <a *ngIf="authenticated" routerLink="mytravel" routerLinkActive="active" class="nav-link">
+        <span class="nav-text">My travel</span>
+      </a>
+      <a *ngIf="authenticated && hasRole('admin')" routerLink="all" routerLinkActive="active" class="nav-link">
+        <span class="nav-text">All travel</span>
+      </a>
     </div>
     <div class="header-actions">
         <a *ngIf="authenticated === false" routerLink="" class="nav-link nav-text" (click)="login()">Log In</a>
